RESOLVED FIXED13800
REGRESSION: Moving a slider moves another unrelated slider
https://bugs.webkit.org/show_bug.cgi?id=13800
Summary REGRESSION: Moving a slider moves another unrelated slider
mitz
Reported 2007-05-21 12:54:27 PDT
In the attached test case, one slider has an oninput handler that changes the style of another element. Strangely, this has two side effects: 1) The thumb's initial position ignores the value attribute. 2) Moving the slider's thumb moves a second, unrelated, slider's thumb along with it.
Attachments
Test case (279 bytes, text/html)
2007-05-21 12:55 PDT, mitz
no flags
Avoid sharing the thumb style (29.76 KB, patch)
2007-05-22 05:51 PDT, mitz
darin: review+
mitz
Comment 1 2007-05-21 12:55:15 PDT
Created attachment 14644 [details] Test case
mitz
Comment 2 2007-05-22 05:11:14 PDT
I think this is caused by style sharing between the two sliders' thumbs.
mitz
Comment 3 2007-05-22 05:51:27 PDT
Created attachment 14653 [details] Avoid sharing the thumb style
Darin Adler
Comment 4 2007-05-22 10:00:23 PDT
Comment on attachment 14653 [details] Avoid sharing the thumb style r=me
Sam Weinig
Comment 5 2007-05-24 17:15:41 PDT
Landed in r21739
Note You need to log in before you can comment on or make changes to this bug.