LayoutTests:

Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13800
          REGRESSION: Moving a slider moves another unrelated slider

        * fast/forms/slider-thumb-shared-style-expected.checksum: Added.
        * fast/forms/slider-thumb-shared-style-expected.png: Added.
        * fast/forms/slider-thumb-shared-style-expected.txt: Added.
        * fast/forms/slider-thumb-shared-style.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13800
          REGRESSION: Moving a slider moves another unrelated slider

        Test: fast/forms/slider-thumb-shared-style.html

        RenderSlider mutates the thumb's style, therefore it must not be shared
        with another slider's thumb, a situation that could occur if the sliders
        themselves shared style.

        * rendering/RenderSlider.cpp:
        (WebCore::RenderSlider::createThumbStyle): Always use a private copy for
        the thumb style.



Canonical link: https://commits.webkit.org/18146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21739 268f45cc-cd09-0410-ab3c-d52691b4dbfc